# nbgitpuller-link

./: CHANGES.md  CITATION.md  LICENSE  MANIFEST.in  Makefile  README.md  environment.yml  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: build-test-ci.yml
examples/: nbgitpuller_link_ex.py  nbgitpuller_link_ex.sh
nbgitpuller_link/: __init__.py  cli.py  link.py
tests/: __init__.py  test_cli.py  test_link.py
