[metadata]
name = nbgitpuller-link
version = 0.2
author = Mark Piper
author_email = mark.piper@colorado.edu
description = Create an nbgitpuller link
long_description = file: README.md, CHANGES.md, LICENSE.md
long_description_content_type = text/markdown
keywords = jupyter, jupyterhub, notebook, git
license = MIT License
url = https://github.com/mdpiper/nbgitpuller-link
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Education

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    click
    validators

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    nbgitpuller-link = nbgitpuller_link.cli:main

[flake8]
exclude = docs
ignore =
	E203
	E501
	W503
max-line-length = 88

[zest.releaser]
tag-format = v{version}
